# AdventOfCode

2015/Day1_Challenge1/: Day1_Challenge1.sln  Program.cs
2015/Day2_Challenge1/: Day2_Challenge1.sln  Program-LAPTOP-AL3JOLL8.cs  Program.cs
2015/Day2_Challenge2/: Day2_Challenge2.sln
2015/Day3_Challenge1/: Day3_Challenge1.sln
2015/Day3_Challenge1_WriteFromScratch_v1/: Day3_Challenge1_WriteFromScratch_v1.csproj  Day3_Challenge1_WriteFromScratch_v1.sln  Program.cs
2015/Day3_Challenge1_v3/: Day3_Challenge1_v3.sln
2015/Day3_Challenge1_v4/: Day3_Challenge1_v4.csproj  Day3_Challenge1_v4.sln  Program.cs
2015/Day3_Challenge1_v5/: Day3_Challenge1_v5.sln  Program.cs
2015/Day3_Challenge2/: Day3_Challenge2.sln  Program.cs
2015/Day3_challenge1_newmethods/: Day3_challenge1_newmethods.csproj  Day3_challenge1_newmethods.sln  Program.cs
2015/Day3_challenge1_newmethods_v2/: Day3_challenge1_newmethods_v2.sln  Program.cs
2015/Day3_challenge1_pleasework/: Day3_challenge1_pleasework.csproj  Day3_challenge1_pleasework.sln  Program.cs
2015/Day4_Challenge1/: Day4_Challenge1.sln  Program.cs
2015/NETFRAMEWORK/: NETFRAMEWORK.csproj  NETFRAMEWORK.sln  (+1 more)
2023/: 2023.sln
2024/: 2024.sln
2025/: .coverage  README.md  pyproject.toml
2025/instructions/: day2.txt
2025/src/day1/: __init__.py  challenge1.py  challenge2.py
2025/src/day2/: challenge1.py  challenge2.py
2025/src/day3/: challenge1.py  challenge2.py
2025/src/day4/: challenge1.py  challenge2.py
2025/src/utility/: retrieve_data.py  scripts.py
2025/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py
(+130 files in other folders)
