[tool.poetry]
packages = [{include = "utility", from = "src"}, {include = "day1", from = "src"}]

[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025"
authors = [
    {name = "ahpalmer"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
pytest = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.8,<0.15.0)"
]
